--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -79,7 +79,7 @@ jobs:
   build-prerelease:
     runs-on: ubuntu-latest
     needs: test
-    if: github.event.release.prerelease == true && (startsWith(github.event.release.tag_name, 'v') && (contains(github.event.release.tag_name, 'a') || contains(github.event.release.tag_name, 'b')))
+    if: github.event.release.prerelease == true
 
     steps:
       - name: Checkout code
@@ -147,8 +147,7 @@ jobs:
   publish-prerelease:
     runs-on: ubuntu-latest
     needs: build-prerelease
-    if: github.event.release.prerelease == true && (startsWith(github.event.release.tag_name, 'v') && (contains(github.event.release.tag_name, 'a') || contains(github.event.release.tag_name, 'b')))
-    environment: pypi
+    if: github.event.release.prerelease == true
 
     permissions:
       id-token: write
