--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["."]
 include = [
-    "tiferet",
+    "tiferet_flask",
     "tiferet_flask.clients",
     "tiferet_flask.commands",
     "tiferet_flask.configs",
